--- a/landhereandnow.sass/main.css
+++ b/landhereandnow.sass/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -78,28 +79,36 @@ button {
     width: 100vw;
     height: 100vh;
   }
+
   section {
     width: 90%;
     max-width: 100%;
     height: auto;
   }
+
   div {
     width: 90%;
     max-width: 100%;
     height: 62px;
     margin: 1rem auto;
   }
+
   label {
     font-size: 1.5rem;
   }
+
   .textform {
     width: 90%;
     max-width: 100%;
   }
+
   section h1 {
     font-size: 6rem;
   }
+
   section h2 {
     font-size: 3rem;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
